--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
     * Accent color_text: black
     */
 
-
 /**************/    
 /*   Global   */
 /**************/    
@@ -53,6 +52,9 @@ h1 {
     list-style-type: none;
     font-size: 16px;
     padding: 16px;
+}
+il {
+    border-left: 3px solid #cc00ff;
 }
 #channels-list {
     background-color: white;
